--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -6,6 +6,10 @@
     </types>
     <types>
         <members>*</members>
+        <name>Profile</name>
+    </types>
+    <types>
+        <members>*</members>
         <name>ApexClass</name>
     </types>
     <types>
